--- a/src/main/resources/templates/pages/thyme_books_list.html
+++ b/src/main/resources/templates/pages/thyme_books_list.html
@@ -58,7 +58,7 @@
                         <td >
                             <form th:action="@{edit}" method="get">
                                 <input type="hidden" name="id" th:value="${books.bookId}" />
-                                <input type="submit" value="Delete" class="btn btn-warning" />
+                                <input type="submit" value="Edit" class="btn btn-warning" />
                             </form>
                         </td>
                     </tr>
